readarr-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: readarr
spec:
  type: ClusterIP
  ports:
    - port: 8787
      targetPort: readarr
  selector:
    app: readarr
    part-of: readarr
---
kind: Service
apiVersion: v1
metadata:
  name: ak-outpost-proxy01
spec:
  type: ExternalName
  externalName: ak-outpost-proxy01.authentik.svc.cluster.local
  ports:
  - port: 9000
    targetPort: 9000
