readarr-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readarr
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/secure-backends: "true"
    kubernetes.io/ingress.class: "nginx-internal"
spec:
  rules:
  - host: <path:apps-kv/data/readarr/config#HOST>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: readarr #ak-outpost-proxy01
            port:
              number: 8787
  tls:
  - hosts:
    - <path:apps-kv/data/readarr/config#HOST>
